<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_name">FIAPP</string>
    <string name="action_settings">Settings</string>
    <string name="rm">RM</string>
    <string name="senha">Senha</string>
    <string name="entrar">Conectar</string>
    <string name="erroLogin">Não foi possível executar o login.</string>
    <string name="painel" />
    <string name="rmtitle">RM:</string>
    <string name="turmatitle">Turma:</string>
    <string name="aulastitle">AULAS</string>
    <string name="destaquestitle">FIQUE POR DENTRO</string>
    <string name="sem_sala_definida">a definir</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="title_activity_lista_apostilas">ListaApostilas</string>
    <string name="title_activity_aviso_item">AvisoItem</string>
    <string name="title_activity_boletim_pager">BoletimPager</string>
    <string name="title_activity_trabalhospos_pager">TrabalhosPos</string>
    <string name="desconectar">Desconectar</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="mensagem">Mensagem</string>
    <string name="boletim_rodape_grad">NAC=Nota de Avaliação Contínua, AM=Avaliação Multidisciplinar, PS=Prova Semestral, FA=Faltas, MD=Média Semestral, PR=Presença, MP=Média Parcial, EXA=Exame, MF=Média Final</string>
    <string name="boletim_rodape_pos">FA=Faltas, MD=Média, SUB=Substitutiva, MF=Média Final</string>
    <string name="boletim_rodape_pos_artigo">FA=Faltas, MT=Média Trabalho, NA=Nota Artigo, SUB=Substitutiva, MF=Média Final</string>
    <string name="trabalhos_rodape_pos">[A]=Data Alterada, [M]=Nota Modificada, SNA=Sem necessidade de avaliação</string>
    <string name="title_activity_boletim_pos">Notas e Faltas</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_aulas_pos">AulasPos</string>
    <string name="carregando">Carregando Dados...</string>
    <string name="domingo">Domingo</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sábado</string>
    <string name="sem_aula">Não haverá aulas nesse dia</string>
    <string name="sem_conexao">Não foi possível carregar os dados!</string>
    <string name="sem_aula_pos">Não há aulas agendadas</string>
    <string name="sem_calendario">Não há nenhum calendário cadastrado</string>
    <string name="cancelada">Cancelada</string>
    <string name="reposicao">Reposição</string>
    <string name="ps1">Prova Semestral 1º Semestre</string>
    <string name="ps2">Prova Semestral 2º Semestre</string>
    <string name="pss1">Prova Substitutiva 1º Semestre</string>
    <string name="pss2">Prova Substitutiva 2º Semestre</string>
    <string name="sem_internet">Não há conexão de internet.</string>
    <string name="resultadoRegistro">Não está registrado!</string>
    <string name="registrando">Registrando!!</string>
    <string name="registrado">Já Registrado!</string>
    <string name="fiap">FIAP</string>
    <string name="fazer_login">Faça seu login no app da FIAP</string>
    <string name="nota">Nota/Pontos:</string>
    <string name="title_activity_aulas_graduacao">AulasGraduacao</string>
</resources>
