<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/back_login" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/login_barratopo" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="25.0dip" android:src="@drawable/logomagenta" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <EditText android:id="@id/login_editrm" android:background="@color/white" android:padding="10.0dip" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/rm" android:inputType="number" />
        <EditText android:id="@id/login_editsenha" android:background="@color/white" android:padding="10.0dip" android:layout_width="200.0dip" android:layout_height="wrap_content" android:hint="@string/senha" android:inputType="textPassword" />
        <Button android:id="@id/login_btnentrar" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/entrar" android:onClick="logar" style="@style/btnEntrar" />
    </LinearLayout>
</RelativeLayout>